7dz/service.yaml

kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  ports:
    - port: 80
      targetPort: 9090
  selector:
   app: prometheus
  type: NodePort
